added surefire-report plugin and dockerfile-maven plugin to biblioback